# Model-devrepo-showcase

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env_example  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml
src/: data.py  model.py  predict.py  settings.py  train.py  utils.py
